kcms/color: Update ColorSchemeHash

startplasma attempts to apply the color scheme in the global theme. It
avoids applying the color scheme again by saving the hash of the current
color scheme.

This creates an issue with automatic global theme switching. For
example, consider the following case:

- the user starts their computer during daylight (the hash of the
  corresponding color scheme is A)
- the user continues using their computer without rebooting until the
  global theme is changed to the dark flavor. This will apply the dark
  color scheme (its hash is B, but it's not written to ColorSchemeHash)
- the user turns off their computer at night
- then the user starts the computer in the morning. startplasma sees
  that the light global theme needs to be applied. It then attempts to
  apply the color scheme. startplasma looks at the hashes and they match
  (A == A). However, that is wrong, the effective applied color scheme
  has hash B.

This change fixes the issue by making the applyScheme() function also
write the hash of the currently applied color scheme.

Our long term goal is to stop updating kdeglobals, but we are not there
yet.

BUG: 511740